# is-antibot

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  package.json  pyproject.toml
.cursor/rules/: sync-antibot-detector.mdc
.github/workflows/: main.yml  pull_request.yml
bench/: detect.js
design/: banner.sketch
docs/: CNAME  README.md  index.html  llms.txt  robots.txt  sitemap.xml
docs/dispatch/: README.md
docs/src/css/: style.css
docs/src/js/: main.js
docs/static/: main.min.js  robots.txt  sitemap.xml  style.min.css
domains/reddit/: har.json  index.html
domains/zara/: har.json  index.html
examples/: basic.py  fetch.mjs  linkedin.js  linkedin.py
providers/: README.md  providers.json  schema.json
providers/anubis/: failed.json
providers/douban/: failed.json
providers/dribbble/: failed.json
providers/google/: failed.json
providers/linkedin/: failed.json  success.json
providers/recaptcha/: failed.json
providers/reddit/: failed.json
providers/weibo/: failed.json
providers/youtube/: failed.json  success.json
src/: index.d.ts  index.js  providers.json  schema.json
src/is_antibot/: __init__.py
test/: domains.js  index.js  interface.js  providers.js  rule-compiler.js  schema.js  set-cookie.js  util.js
tests/: conftest.py  test_cookies.py  test_detection.py  test_fixtures.py  test_interface.py
