[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "is-antibot"
version = "0.1.0"
description = "Detect antibot protection systems from HTTP responses"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["antibot", "scraping", "captcha", "cloudflare", "datadome"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/kikobeats/is-antibot"
Repository = "https://github.com/kikobeats/is-antibot"

[tool.hatch.build.targets.wheel]
packages = ["src/is_antibot"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "httpx>=0.27",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that make real HTTP requests (may be slow/flaky)",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
